// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VRadio.ts should be render colored radio 1`] = `
<div class="v-radio theme--light">
  <div class="v-input--selection-controls__input">
    <i class="v-icon notranslate mdi mdi-radiobox-blank theme--light"
       aria-hidden="true"
    >
    </i>
    <input aria-checked="false"
           id="input-22"
           role="radio"
           type="radio"
    >
    <div class="v-input--selection-controls__ripple">
    </div>
  </div>
</div>
`;

exports[`VRadio.ts should not render aria-label attribute with no label value on input group 1`] = `
<div class="v-radio theme--light">
  <div class="v-input--selection-controls__input">
    <i class="v-icon notranslate mdi mdi-radiobox-blank theme--light"
       aria-hidden="true"
    >
    </i>
    <input aria-checked="false"
           id="input-4"
           role="radio"
           type="radio"
           name="name"
    >
    <div class="v-input--selection-controls__ripple">
    </div>
  </div>
</div>
`;

exports[`VRadio.ts should render proper input name 1`] = `
<div class="v-radio theme--light">
  <div class="v-input--selection-controls__input">
    <i class="v-icon notranslate mdi mdi-radiobox-blank theme--light"
       aria-hidden="true"
    >
    </i>
    <input aria-checked="false"
           id="input-7"
           role="radio"
           type="radio"
           name="name"
    >
    <div class="v-input--selection-controls__ripple">
    </div>
  </div>
</div>
`;

exports[`VRadio.ts should render role and aria-checked attributes on input group 1`] = `
<div class="v-radio theme--light">
  <div class="v-input--selection-controls__input">
    <i class="v-icon notranslate mdi mdi-radiobox-blank theme--light"
       aria-hidden="true"
    >
    </i>
    <input aria-checked="false"
           id="input-1"
           role="radio"
           type="radio"
           name="name"
           modelvalue="test"
           value="test"
    >
    <div class="v-input--selection-controls__ripple">
    </div>
  </div>
</div>
`;

exports[`VRadio.ts should use custom icons 1`] = `
<div class="v-radio theme--light">
  <div class="v-input--selection-controls__input">
    <i class="v-icon notranslate material-icons theme--light"
       aria-hidden="true"
    >
      bar
    </i>
    <input aria-checked="false"
           id="input-13"
           role="radio"
           type="radio"
           modelvalue="test"
           value="test"
    >
    <div class="v-input--selection-controls__ripple">
    </div>
  </div>
</div>
`;

exports[`VRadio.ts should use custom icons 2`] = `
<div class="v-radio theme--light">
  <div class="v-input--selection-controls__input">
    <i class="v-icon notranslate material-icons theme--light"
       aria-hidden="true"
    >
      bar
    </i>
    <input aria-checked="false"
           id="input-13"
           role="radio"
           type="radio"
           modelvalue="test"
           value="test"
    >
    <div class="v-input--selection-controls__ripple">
    </div>
  </div>
</div>
`;
